add final project

--- a/analise_exploratoria_dados/Projeto_ADA.ipynb
+++ b/analise_exploratoria_dados/Projeto_ADA.ipynb
@@ -8,12 +8,12 @@
       "source": [
         "## **1. Introdução**\n",
         "\n",
-        "O presente relatório trata-se de análise resumida com o objetivo de indentificar o perfil dos clientes que saíram do banco no período analisado."
+        "O presente relatório trata-se de análise resumida com o objetivo de identificar o perfil dos clientes que saíram do banco no período analisado."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "metadata": {
         "id": "WuJdpt25cfc1"
       },
@@ -693,7 +693,7 @@
           "height": 269
         },
         "id": "krFsC6xs5SJ5",
-        "outputId": "0a354f8d-8c5f-4ef7-beab-ac4df4baaa92"
+        "outputId": "20d63d77-c057-4ae9-b5fe-f0c3ec7dd0f9"
       },
       "outputs": [
         {
@@ -711,7 +711,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a7d8e59b-c5e0-44b3-9eaf-f1c99b46d365\">\n",
+              "  <div id=\"df-b4afc831-7e09-43c3-ae21-8be03242d099\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -782,7 +782,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7d8e59b-c5e0-44b3-9eaf-f1c99b46d365')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4afc831-7e09-43c3-ae21-8be03242d099')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -833,12 +833,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a7d8e59b-c5e0-44b3-9eaf-f1c99b46d365 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b4afc831-7e09-43c3-ae21-8be03242d099 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a7d8e59b-c5e0-44b3-9eaf-f1c99b46d365');\n",
+              "          const element = document.querySelector('#df-b4afc831-7e09-43c3-ae21-8be03242d099');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -861,7 +861,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 126
         }
       ],
       "source": [
@@ -871,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -916,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1346,7 +1346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1382,7 +1382,7 @@
         "id": "CGEqmOMbMG83"
       },
       "source": [
-        "**2.5 Análise da interaçaõ dos clientes com o banco**\n",
+        "**2.5 Análise da interação dos clientes com o banco**\n",
         "\n",
         "Clientes que não são membros ativos têm maior churn que membros ativos."
       ]
@@ -1554,7 +1554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "id": "CDxwVPLbVCed"
       },
@@ -1614,7 +1614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1657,7 +1657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "id": "Cw6QrCX9aXPm"
       },
@@ -1671,7 +1671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1711,8 +1711,8 @@
         "\n",
         "Ao analisar os dados fornecidos, conclui-se que o perfil  dos clientes que possuem maior tedência a encerrarem seu relacionamento com o banco são  clientes da alemanha, do sexo feminino, score de crédito baixo, saldo bancário elevado, idade entre 45 a 60 anos, com três a quatro produtos e que não são membros ativos.\n",
         "\n",
-        "Ressalta-se a importância de uma análise mais detalhada desses dados, em especial, dos produtos consumidos por esses clientes e saldo bancário, realizando um detalhamento do tipo do produto que os clientes que saíram possuíam e como foi realizada essa venda, para então, poder ter conclusões mais acertivas nesse quesito.\n",
-        "E entender esse detalhamento a procedência do saldo em conta desses clientes, pois esse fato é um alerta significativo da perda de potenciais bons clientes."
+        "Ressalta-se a importância de uma análise mais detalhada desses dados, em especial, dos produtos consumidos por esses clientes e saldo bancário, realizando um detalhamento do tipo do produto que os clientes que saíram possuíam e como foi realizada essa venda, para então, poder ter conclusões mais assertivas nesse quesito.\n",
+        "E expandir esse detalhamento com a procedência do saldo em conta desses clientes, pois esse fato é um alerta significativo da perda de potenciais bons clientes."
       ]
     }
   ],
